[package]
name = "game_start_macro"
version = "0.1.0"
edition = "2021"
authors = ["HuaGu_Dragon"]
description = "A macro for starting a game"
license = "MIT"
documentation = "https://docs.rs/game_start_macro"
homepage = "https://github.com/HuaGu-Dragon/start_gaming"
repository = "https://github.com/HuaGu-Dragon/start_gaming"


[lib]
proc-macro = true
doctest = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
